# constraint_aware_neural_networks

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
src/constraint_aware_neural_networks/: cli.py
src/constraint_aware_neural_networks/common/: algorithm_types.py  config_helper.py  data_handle.py  loss_functions.py  network_architectures.py  parameters.py  train.py
src/constraint_aware_neural_networks/models/: model_types.py
src/constraint_aware_neural_networks/models/cubic/: config.py  constraint.py
src/constraint_aware_neural_networks/models/euler/: config.py  constraint.py
src/constraint_aware_neural_networks/models/iso_euler/: config.py  constraint.py
src/constraint_aware_neural_networks/util/: evaluate.py  plotting.py
